--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
-Here be dragons.
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Ania Warzecha</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Playfair+Display:,300, 400, 700" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelementplayer.min.css">
+
+    <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
+
+
+    <!-- Theme Style -->
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+
+    <div class="site-wrap">
+
+      <a href="#" class="offcanvas-toggle js-offcanvas-toggle">Menu</a>
+      <div class="offcanvas_menu" id="offcanvas_menu">
+        <ul class="mb-5">
+          <li class="active"><a href="index.html">Bio</a></li>
+          <li><a href="http://blog.missaniav.com/" target="_blank">Blog</a></li>
+          <!-- <li><a href="resume.html">Resume</a></li> -->
+        </ul>
+
+        <ul class="social">
+          <li><a href="https://github.com/aniav" class="fa fa-github"></a></li>
+          <li><a href="https://stackoverflow.com/users/808990/ania-warzecha" class="fa fa-stack-overflow"></a></li>
+          <li><a href="https://twitter.com/aniawarzecha" class="fa fa-twitter"></a></li>
+          <li><a href="https://www.linkedin.com/in/annawarzecha/" class="fa fa-linkedin"></a></li>
+        </ul>
+
+</br><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="colorlib">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+      </div>
+
+      <aside style="background-image: url(img/profile_big.jpg);"></aside>
+      <main>
+        <h1 class="mb-0">Hi, I'm Ania Warzecha</h1>
+        <div class="mb-5">
+        <p class="lead mb-3">Software Architect 👩‍💻</p>
+        <p>I'm a software engineer with 10+ years of professional experience. I am based in Wrocław, Poland.</p>
+        <p>Over the years I've been gaining experience with everything from small websites, through recommendation systems, machine learning, native mobile apps, up to huge projects with years of legacy code.</p>
+        <p>I am currently focusing on sharing my knowledge and experience to allow people to deliver good quality solutions on time. Occasionally, I will write about it on <a href="http://blog.missaniav.com/">my technical blog</a> (both in English and Polish).</p>
+        <p>Outside of work I am an <a href="http://diy.missaniav.com/">amateur seamstress</a> and a <a href="https://www.instagram.com/miss.aniav/">yeast apprentice</a>.</p>
+        <p>Oversharing is my superpower 💪</p>
+        </div>
+
+        <!-- <h2 class="mb-4 mt-5">Services</h2>
+        <div class="row">
+          <div class="col-md-6 col-lg-6 mb-4">
+            <div class="media custom-media  d-block">
+              <div class="icon mr-3"><span class="ion-android-cart"></span></div>
+              <div class="media-body">
+                <h3 class="mt-0"><a href="#">eCommerce Websites</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed obcaecati totam.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6 mb-4">
+            <div class="media custom-media  d-block">
+              <div class="icon mr-3"><span class="ion-bonfire"></span></div>
+              <div class="media-body">
+                <h3 class="mt-0"><a href="#">Branding Identity </a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed obcaecati, totam.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-6 mb-4">
+            <div class="media custom-media  d-block">
+              <div class="icon mr-3"><span class="ion-videocamera"></span></div>
+              <div class="media-body">
+                <h3 class="mt-0"><a href="#">Video Editing</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed obcaecati totam.</p>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-md-6 col-lg-6 mb-4">
+            <div class="media custom-media  d-block">
+              <div class="icon mr-3"><span class="ion-cube"></span></div>
+              <div class="media-body">
+                <h3 class="mt-0"><a href="#">Web Applications </a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed obcaecati, totam.</p>
+              </div>
+            </div>
+          </div> -->
+        </div>
+        
+      </main>
+    </div>
+
+    <!-- loader -->
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
+
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/main.js"></script>
+
+  </body>
+</html>
